[package]
name = "subruster"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
trust-dns-resolver = "0.23" # or the newer 'hickory-resolver'
colored = "2"
futures = "0.3" # Required for buffer_unordered
anyhow = "1.0"
